--- a/src/styleSheet/_mixins.scss
+++ b/src/styleSheet/_mixins.scss
@@ -80,3 +80,32 @@
     }
   }
 }
+
+
+@mixin custom-scrollbar($thumb-color: #F98416, $track-color: #f5f5f5) {
+  overflow-y: auto;
+  padding-right: 2rem;
+  &::-webkit-scrollbar {
+    width: 8px;
+    background-color: $track-color;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: $thumb-color;
+
+    &:hover {
+      background-color: darken($thumb-color, 10%);
+    }
+  }
+
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: $track-color;
+  }
+
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+}
+
+
